Change to bias answer.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -535,7 +535,7 @@ which of these is larger. However, since the
 integral term dominates for most radial distance pairs, our final sensitivity
 estimates are largely unaffected by this uncertainty (as shown below). In a
 high-precision survey the sensitivity of the cross and local terms to the
-difference in the biases may help break measurement degeneracies between terms.
+difference in the biases may help break measurement degeneracies.
 }
 
 In a real survey, measurement of the dispersion-space clustering
