As re-submitted.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -535,7 +535,9 @@ which of these is larger. However, since the
 integral term dominates for most radial distance pairs, our final sensitivity
 estimates are largely unaffected by this uncertainty (as shown below). In a
 high-precision survey the sensitivity of the cross and local terms to the
-difference in the biases may help break measurement degeneracies.
+difference in the biases may help break measurement degeneracies, while sign
+changes of terms as a function of radial distance are a signature of
+bias evolution.
 }
 
 In a real survey, measurement of the dispersion-space clustering
@@ -604,7 +606,7 @@ is near optimal at other multipoles.
 \blue{
 To determine if such a survey would be
 able to distinguish between models of FRB clustering we plot the same quantity
-for $b_f=0.7$.
+for $b_f=0.8$.
 }
 The result is shown
 in Figure~\ref{f:sensitivity}.
@@ -649,14 +651,15 @@ We have
 shown in Figure~\ref{f:sensitivity}
 that a survey detecting $10000$ fast radio bursts of cosmological
 origin could detect the
-clustering signal\blue{, however such a survey would be mostly sensitive to the
-integral term and thus could not distinguish between FRB clustering models}.
+clustering signal.
 This is in rough
 approximation to what might be achieved in a reasonable amount of time by the
 Canadian Hydrogen Intensity
 Mapping Experiment (CHIME)\footnote{\url{http://chime.phas.ubc.ca/}}, the
 Square Kilometer Array\footnote{\url{http://www.skatelescope.org/}},
 or other upcoming wide-field telescopes.
+\blue{Such a survey would be primarily sensitive to the integral 
+term and thus rather insensitive to the details of FRB clustering models.}
 Looking forward, dispersion-space
 clustering could become a precision probe of large-scale structure should
 observational factors turn out to be favourable compared to spectroscopic
