--- a/writeup/summary.tex
+++ b/writeup/summary.tex
@@ -13,4 +13,13 @@ structures}
 
 One of the most challenging aspects of astronomy is measuring distances.
 
+
+%%%%% Justification text for submission. %%%%
+The study of the large-scale structure of the Universe has the potential to
+shed light on aspects of fundamental physics including the nature of
+cosmological inflation, the nature of dark energy, and the properties of
+neutrinos.  It is thus of broad appeal to the physics community. This work
+opens up a new way to study large-scale structure in three dimensions and is
+observationally relevant on short time scales of the next few years.
+
 \end{document}
