--- a/writeup/summary.tex
+++ b/writeup/summary.tex
@@ -11,15 +11,18 @@ structures}
 
 \maketitle
 
-One of the most challenging aspects of astronomy is measuring distances.
+One of the most challenging aspects of astronomy is knowing distances to far
+off objects. Newly discovered fast radio bursts---originating from across the
+Universe---provide distance measurements that will enable the largest
+structures of the cosmos to be studied in three dimensions. Traditionally,
+cosmological distances are measured using Doppler shifts caused by the Hubble
+expansion of the Universe. Distortions to brief radio signals can be used to
+measure the total amount material between earth and the source, permitting
+another way to measure distance. However this process isn't perfect.
+Intervening clumps of matter can distort the distance measure, a fact that can
+be exploited to glean yet more information about the Universe's structure.
+Wide-field radio telescopes are expecting to detect thousands of these radio
+bursts, opening a new window for studying the cosmos.
 
-
-%%%%% Justification text for submission. %%%%
-The study of the large-scale structure of the Universe has the potential to
-shed light on aspects of fundamental physics including the nature of
-cosmological inflation, the nature of dark energy, and the properties of
-neutrinos.  It is thus of broad appeal to the physics community. This work
-opens up a new way to study large-scale structure in three dimensions and is
-observationally relevant on short time scales of the next few years.
 
 \end{document}
