clairity edits to summary.

--- a/writeup/summary.tex
+++ b/writeup/summary.tex
@@ -11,18 +11,19 @@ structures}
 
 \maketitle
 
-One of the most challenging aspects of astronomy is knowing distances to far
-off objects. Newly discovered fast radio bursts---originating from across the
-Universe---provide distance measurements that will enable the largest
-structures of the cosmos to be studied in three dimensions. Traditionally,
-cosmological distances are measured using Doppler shifts caused by the Hubble
-expansion of the Universe. Distortions to brief radio signals can be used to
-measure the total amount material between earth and the source, permitting
-another way to measure distance. However this process isn't perfect.
-Intervening clumps of matter can distort the distance measure, a fact that can
-be exploited to glean yet more information about the Universe's structure.
-Wide-field radio telescopes are expecting to detect thousands of these radio
-bursts, opening a new window for studying the cosmos.
+One of the most challenging aspects of astronomy is determining distances to
+far off objects. Newly discovered fast radio bursts---thought to originate from
+the far reaches of the Universe---provide distance measurements that will
+enable the largest structures of the cosmos to be studied in three dimensions.
+Traditionally, cosmological distances are obtained using Doppler shifts caused
+by the Hubble expansion of the Universe. In contrast, distortions to fast radio
+burst signals can be used to measure the total amount material between earth
+and the burst's source, permitting another way to determine distance.  However
+this process isn't perfect, as intervening clumps of excess matter can distort the
+measured distance. This fact can be exploited to glean yet more
+information through these intervening structures.  Wide-field radio telescopes
+are expecting to detect thousands of these bursts, opening a new window for
+studying the cosmos.
 
 
 \end{document}
